--- a/demo/app/(mdx)/components/button/page.mdx
+++ b/demo/app/(mdx)/components/button/page.mdx
@@ -6,6 +6,6 @@ order: 2
 
 ## Styled Button
 
-import { StyledButton } from "shiro-ui"
+import { StyledButton } from "shiro-rc"
 
 <StyledButton>A button</StyledButton>
