chore: update page
Signed-off-by: Innei <i@innei.in>

--- a/demo/app/(mdx)/install/page.mdx
+++ b/demo/app/(mdx)/install/page.mdx
@@ -2,10 +2,14 @@
 order: 1
 ---
 
-# Quick Start
+# Shiro React Component
 
-```js
-const a = 1
+This is a UI component library port from Shiro for React/RSC.
+
+Status: WIP
+
+## Installation
+
+```bash
+npm install shiro-rc
 ```
-
-1
